crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__json_replacements_reject_partially_overlapping_edits.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: error.to_string()
---
config error: json edit ranges overlap or conflict
