crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__selected_json_manifest_edits_deduplicate_root_and_dependency_spans@grow_once.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: updated
---
{
  "version": "10.0.0",
  "dependencies": {
    "api": "~10.0.0",
    "external": "^9.0.0"
  },
  "metadata": { "version": "4.0.0" }
}
