crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__update_json_manifest_text_keeps_owner_version_distinct_from_named_dependency.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: updated
---
{
  "version": "3.0.0",
  "dependencies": {
    "version": "~2.0.0"
  }
}
