crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__update_json_manifest_text_prefers_dependency_version_over_owner_version.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: updated
---
{
  "version": "3.0.0",
  "dependencies": {
    "api": "~2.0.0"
  }
}
