crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__update_json_manifest_text_updates_selected_dependency_without_owner_version.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: updated
---
{
  "version": "1.0.0",
  "dependencies": {
    "api": "~2.0.0",
    "otherapi": "^9.0.0"
  }
}
