crates/monochange_core/src/__tests__/snapshots/monochange_core__tests__lib_tests__update_selected_json_manifest_text_preserves_unselected_root_version.snap
---
source: crates/monochange_core/src/__tests__/lib_tests.rs
expression: updated
---
{
  "version": "1.0.0",
  "metadata": { "version": "3.0.0" },
  "dependencies": { "api": "~2.0.0", "external": "^9.0.0" }
}
